@@ -50,6 +50,7 @@
 29. When using scrollviews where the scrollbar is within the frame, track mouse
     events so that we can simulate the scrollbar being pressed. This extends the
     usable width of a vertial scrollbar to the right hand side of the frame.
+30. Allow to darken popup menu background.
 
 0.60
 ----
